added clipboard support to web UI